	* include/dlvhex/Atoms.hpp: fixing struct ModuleAtom
	* src/dlvhex/Atoms.cpp: fixing print output ModuleAtom
	* src/dlvhex/ProgramCtx.cpp: fixing print output ModuleAtom
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: updating createModAtomFromModAtom
	* testsuite/TestHexParserModule.cpp: updating test cases for module output
	* Committed in revision 2494

2010-11-26  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* ID-Concept.txt: adding definition for module atom
	* include/dlvhex/ID.hpp: adding definition for module atom
	* src/dlvhex/ID.hpp: adding definition for module atom
	* Comitted at revision 2477.

	* include/dlvhex/HexGrammar.tcc: put Module atom in literal
	* testsuite/TestHexParserModule.cpp: test case for Module atom
	* Makefile.am: defining test: TestHexParserModule
	* Committed revision 2478.

	* testsuite/TestHexParserModule.cpp: adding test to parse module header
	* Committed revision 2480.

2010-11-22  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/HexGrammar.h: adding grammar for module atom
	* include/dlvhex/HexGrammar.tcc: adding grammar for module atom

2010-11-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Set error-limit to 5 for clang.
	* testsuite/Makefile.am: Likewise.

2010-10-30  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* NEWS: Update.

	* src/dlvhex/GuessCheckModelGenerator.cpp: Sanitize verbose output.
	* src/dlvhex/DLVProcess.cpp: Likewise.

	* src/dlvhex/GraphProcessor.cpp: Add minimality check for
	allLeavesResult before adding to resultModels (ticket #33).

	* examples/minimality.hex: New test for programs with headcycles (ticket #33).
	* examples/tests/dlvhextests.test: Likewise.
	* examples/tests/minimality.out: Likewise.
	* src/testsuite/dlvhex/TestPlugin.cpp: Likewise.

2010-10-21  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/Makefile.am: Add builtin_safety2.hex for new DLV
	release 2010-10-14.
	* examples/builtin_safety1.hex: Likewise.