@@ -57,8 +57,8 @@ BOOST_AUTO_TEST_CASE(testHexParserModuleAtoms)
   std::cout << "test 2" <<std::endl;
 
   std::stringstream ss;
-//  ss << "#module(mymod,[p/0,q/1,r/2])." << std::endl <<
-  ss << ":- @mymod[p,q]::r(b,c).";
+  ss << "#module(mymod,[p/0,q/1,r/2])." << std::endl <<
+        ":- @mymod[p,q]::r(b,c).";
 //  ss << ":- &mymod[p,q](r,b,c).";
   HexParser parser(ctx);
   BOOST_REQUIRE_NO_THROW(parser.parse(ss));
@@ -82,9 +82,73 @@ BOOST_AUTO_TEST_CASE(testHexParserModuleAtoms)
   BOOST_REQUIRE((idc) != ID_FAIL);
   BOOST_REQUIRE((idmymod) != ID_FAIL);
 
+  BOOST_REQUIRE(ctx.edb != 0);
+
   BOOST_REQUIRE(ctx.idb.size() == 1);
   {
     const Rule& r = ctx.registry->rules.getByID(ctx.idb[0]);
+    BOOST_CHECK(r.kind == (ID::MAINKIND_RULE | ID::SUBKIND_RULE_CONSTRAINT | ID::PROPERTY_RULE_MODATOMS));
+    BOOST_CHECK(r.weight == ID_FAIL);
+    BOOST_CHECK(r.level == ID_FAIL);
+    BOOST_CHECK(r.head.size() == 0);
+    BOOST_REQUIRE(r.body.size() == 1);
+    {
+      ID idlit = r.body[0];
+      BOOST_CHECK(idlit.isLiteral());
+      BOOST_CHECK(idlit.isModuleAtom());
+/*
+      const ExternalAtom& at = ctx.registry->eatoms.getByID(idlit);
+      BOOST_CHECK(ID(at.kind,0).isModuleAtom());
+      BOOST_CHECK(at.predicate == idmymod);
+      BOOST_REQUIRE(at.inputs.size() == 2);
+      BOOST_CHECK(at.inputs[0] == idp);
+      BOOST_CHECK(at.inputs[1] == idq);
+      BOOST_REQUIRE(at.tuple.size() == 3);
+      BOOST_CHECK(at.tuple[0] == idb);
+      BOOST_CHECK(at.tuple[1] == idX);
+      BOOST_CHECK(at.tuple[2] == id4);
+*/
+    }
+  }
+}
+
+BOOST_AUTO_TEST_CASE(testHexParserModuleAtomsMany) 
+{
+  std::cout << "test 1" <<std::endl;
+  ProgramCtx ctx;
+  ctx.registry = RegistryPtr(new Registry);
+  std::cout << "test 2" <<std::endl;
+
+  std::stringstream ss;
+  ss << "#module(mymod,[p/0,q/1,r/2])." << std::endl <<
+        "a :- b,c." << std::endl <<
+        ":- @mymod[p,q]::r(b,c).";
+//  ss << ":- &mymod[p,q](r,b,c).";
+  HexParser parser(ctx);
+  BOOST_REQUIRE_NO_THROW(parser.parse(ss));
+  std::cout << "test 3" <<std::endl;
+
+	LOG_REGISTRY_PROGRAM(ctx);
+  std::cout << "test 4" <<std::endl;
+
+  ID idp = ctx.registry->terms.getIDByString("p");
+  ID idq = ctx.registry->terms.getIDByString("q");
+  ID idr = ctx.registry->terms.getIDByString("r");
+  ID idb = ctx.registry->terms.getIDByString("b");
+  ID idc = ctx.registry->terms.getIDByString("c");
+  ID idmymod = ctx.registry->terms.getIDByString("mymod");
+  std::cout << "test 5" <<std::endl;
+
+  BOOST_REQUIRE((idp) != ID_FAIL);
+  BOOST_REQUIRE((idq) != ID_FAIL);
+  BOOST_REQUIRE((idr) != ID_FAIL);
+  BOOST_REQUIRE((idb) != ID_FAIL);
+  BOOST_REQUIRE((idc) != ID_FAIL);
+  BOOST_REQUIRE((idmymod) != ID_FAIL);
+
+  BOOST_REQUIRE(ctx.idb.size() == 2);
+  {
+    const Rule& r = ctx.registry->rules.getByID(ctx.idb[1]);
     BOOST_CHECK(r.kind == (ID::MAINKIND_RULE | ID::SUBKIND_RULE_CONSTRAINT | ID::PROPERTY_RULE_MODATOMS));
     BOOST_CHECK(r.weight == ID_FAIL);
     BOOST_CHECK(r.level == ID_FAIL);
